[package]
name = "spritexai-pay"
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
description = "AI-native, open-core payment gateway for MFS ecosystems (bKash, Nagad)."
authors = ["Mohammad Sijan <sijan@spritexai.com>"]
license = "Apache-2.0"
repository = "https://github.com/spritexai/spritexai-pay-core"
readme = "README.md"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
tower-http = { version = "0.5", features = ["trace", "fs"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
once_cell = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tower_governor = "0.4"

[profile.release]
# Tuned for small VPS footprint — SpritEXAI Pay ships as a single lean static binary.
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
